# miximixi

./: .env.example  .env.vaultwarden.example  .gitignore  .graphify_cached.json  .graphify_uncached.txt  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.dev.yml  docker-compose.vaultwarden.yml  docker-compose.yml  handover.md  nginx-dev.conf  run-logs-2.txt  run-logs.txt  start-backend-dev.cmd  start-frontend.cmd
backend/: Dockerfile  instagram_cookies.txt  migrate_images.py  migrate_sync_all_step_images.py  pyproject.toml  pyproject.toml (modify)  run_migrations.py  sync_step_images_manual.sql  sync_step_images_to_db.py  test-endpoints.sh
backend/app/: auth.py  config.py  crypto.py  instagram_auth.py  instagram_service.py  instagram_sync_worker.py  llm_provider.py  main.py  media_processor.py  models.py  queue_worker.py  source_identifier.py  telegram_bot.py
backend/migrations/: 001_add_step_image_filename.sql  001_initial.sql  002_telegram_chat_id.sql  002_translations.sql  003_schema_updates.sql  006_category_constraint.sql  007_telegram_chat_id.sql  008_instagram_sync_state.sql  009_instagram_sync_collections.sql  010_admin_users.sql  011_fix_import_queue_cascade.sql  012_recipe_source_tracking.sql  013_backfill_source_type_id.sql  014_ingredient_densities.sql  016_instagram_auth_state.sql  017_user_auth_telegram_linking.sql  README.md  run_migrations.ps1  run_migrations.sh
backend/scripts/: backfill_source_type.py  migrate_steps_span_format.py
backend/tests/: CI_INTEGRATION.md  QUEUE_WORKER_TESTS.md  __init__.py  conftest.py
backend/tests/functional/: __init__.py  test_deduplication_functional.py  test_ingredient_densities.py  test_instagram_sync_integration.py  test_main_routes.py  test_og_endpoint.py  test_queue_worker.py
backend/tests/unit/: __init__.py  test_auth.py  test_auth_endpoints.py  test_config_auth.py  (+16 more)
(+183 files in other folders)
