[tool.poetry]
name = "miximixi-backend"
version = "0.1.0"
description = "Miximixi Recipe Import Backend"
authors = ["Fabian <cto@sektbirne.fun>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
httpx = "^0.27.0"
psycopg2-binary = "^2.9.0"
anthropic = "^0.30.0"
openai = "^1.35.0"
google-generativeai = "^0.7.0"
instagrapi = "^2.1.2"
yt-dlp = "^2024.7.1"
playwright = "^1.45.0"
beautifulsoup4 = "^4.12.0"
python-multipart = "^0.0.9"
pydantic-settings = "^2.3.0"
instaloader = "^4.15.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"